fixtures/cell_env/invalid/04_wildcard_endpoint.sea
Cell "Wildcard"
    @profile "python-agent-v1"

Endpoint "anywhere"
    @host "*"
    @port "443"
